# coffee_v2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  fw  partitions.csv  sdkconfig.defaults  sim  sim-watch  sync
main/: CMakeLists.txt  idf_component.yml  main.c
main/app/: app_boot_log.c  app_boot_log.h  app_init.c  app_init.h  app_settings.c  app_settings.h  app_version.h
main/config/: config_mic.h  config_pin.h  config_room.h  config_settings.c  config_settings.h  config_sys.h  config_sys_audio.h  config_sys_display.h  config_sys_key.h  config_sys_task.h  config_sys_wifi.h  config_sys_ws.h  config_ui.h
main/core/con/: con.c  con.h
main/core/msg/: msg.c  msg.h  msg_sub.c  msg_sub.h
main/core/state/: state.c  state.h  state_map.c  state_map.h  state_types.h  status.c  status.h
main/core/store/: store_kv.c  store_kv.h
main/core/utils/: log.c  log.h
main/modules/audio/: audio.c  audio.h  audio_actor.c  audio_actor.h
main/modules/display/: lcd_i80_8.c  lcd_i80_8.h  lcd_i80_8_panel.h  lcd_panel_ili9341.c  lcd_panel_st7798.c
main/modules/input/encoder/: encoder.c  encoder.h  encoder_actor.c  encoder_actor.h
main/modules/input/touch/: touch.c  touch.h  touch_ft6336u.c  touch_ft6336u.h
main/modules/intercom/: intercom_actor.c  intercom_actor.h
main/modules/key/: cw_keyer_actor.c  cw_keyer_actor.h  key.c  key.h  key_actor.c  key_actor.h
main/modules/mic/: mic.c  mic.h  mic_actor.c  mic_actor.h
main/modules/store/: store.c  store.h  store_actor.c  store_actor.h
main/modules/ui/: ui.c  ui.h  ui_actor.c  ui_actor.h
main/modules/ui/adapter/: lvgl_port.c  lvgl_port.h
main/modules/ui/font/: all_symbols.txt  buildFont  chars.txt  font_12.c  font_14.c  font_16.c  font_menu_icon.c  icon_map.txt  (+4 more)
main/modules/wifi/: wifi.c  wifi.h  wifi_actor.c  wifi_actor.h  wifi_profile.c  wifi_profile.h  wifi_scan_cache.c  wifi_scan_cache.h  wifi_settings.c  wifi_settings.h
main/modules/ws/: ws_actor.c  ws_actor.h  ws_client.c  ws_client.h  ws_cw_cache.c  ws_cw_cache.h  ws_room_cache.c  ws_room_cache.h
main/tests/: tests.c  tests.h
main/tests/encoder/: test_encoder.c  test_encoder.h
main/tests/lcd/: test_lcd.c  test_lcd.h
main/tests/mic/: test_mic.c  test_mic.h
main/tests/state/: test_state_contract.c  test_state_contract.h
simulator/: CMakeLists.txt  README.md  lv_conf.h
simulator/include/: esp_err.h
simulator/src/: app_sim.c  app_sim.h  main.c
(+1412 files in other folders)
